--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -4,6 +4,7 @@
 	<!-- Angular Material style sheet -->
     <link rel="stylesheet" href="static/lib/angular-material.min.css">
 	<link rel="stylesheet" href="static/css/main.css">
+  <title>SEIL Smart Door</title>
 </head>
 <body ng-app="SmartDoor" ng-cloak  ng-controller="HomeCtrl">
   <!--
