--- a/Server/static/css/main.css
+++ b/Server/static/css/main.css
@@ -1,7 +1,7 @@
-md-card.present{
+md-card.occupant.present{
 	background: #0097a7;
 }
-md-card{
+md-card.occupant{
   cursor:pointer;
 }
 .training_mode md-card{
