--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Angular Material style sheet -->
-    <link rel="stylesheet" href="static/lib/angular-material.min.css">
+    <link rel="stylesheet" href="static/lib/node_modules/angular-material/angular-material.css">
 	<link rel="stylesheet" href="static/css/main.css">
   <title>SEIL Smart Door</title>
 </head>
@@ -13,22 +13,21 @@
 <div ng-include="'static/templates/toolbar.html'"></div>
 <div ng-include="include_url"></div>
 
-<script src="static/lib/mqttws31.min.js"></script>
 
 
 <!-- Angular Material requires Angular.js Libraries -->
-<script src="static/lib/angular.min.js"></script>
-<script src="static/lib/angular-animate.min.js"></script>
-<script src="static/lib/angular-aria.min.js"></script>
-<script src="static/lib/angular-messages.min.js"></script>
-<script src="static/lib/angular-resource.min.js"></script>
-<script src="static/lib/angular-route.min.js"></script>
+<script src="static/lib/node_modules/angular/angular.min.js"></script>
+<script src="static/lib/node_modules/angular-animate/angular-animate.min.js"></script>
+<script src="static/lib/node_modules/angular-aria/angular-aria.min.js"></script>
+<script src="static/lib/node_modules/angular-messages/angular-messages.min.js"></script>
+<script src="static/lib/node_modules/angular-resource/angular-resource.min.js"></script>
+<script src="static/lib/node_modules/angular-route/angular-route.min.js"></script>
 
 <!-- Angular Material Library -->
-<script src="static/lib/angular-material.min.js"></script>
+<script src="static/lib/node_modules/angular-material/angular-material.min.js"></script>
 <!-- Angular MQTT Library -->
-<script src="static/lib/bower_components/angular-mqtt/src/browserMqtt.js"></script>
-<script src="static/lib/bower_components/angular-mqtt/src/angular-MQTT.js"></script>
+<script src="static/lib/node_modules/ngmqtt/ngmqtt.js"></script>
+<script src="static/lib/node_modules/ngmqtt/browserMqtt.js"></script>
 <!-- Your application bootstrap  -->
 <script src="static/js/app.js"></script>
 <script src="static/js/routes.js"></script>
